fix(app): Change text to adapt to dark mode

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -145,7 +145,7 @@
   }
 
   .btn-pri {
-    @apply inline-flex items-center justify-center rounded-md bg-brand-blue px-4 py-2 font-mono text-xs font-bold text-black uppercase transition-all duration-200 hover:bg-brand-blue dark:text-white;
+    @apply inline-flex items-center justify-center rounded-md bg-brand-blue px-4 py-2 font-mono text-xs font-bold text-foreground uppercase transition-all duration-200 hover:bg-brand-blue dark:text-white;
   }
 
   .btn-pri:hover {
@@ -153,7 +153,7 @@
   }
 
   .btn-sec {
-    @apply inline-flex items-center justify-center rounded-md border-1 border-border px-4 py-2 font-mono text-xs font-bold text-black uppercase transition-all duration-200 dark:text-white;
+    @apply inline-flex items-center justify-center rounded-md border-1 border-border px-4 py-2 font-mono text-xs font-bold text-foreground uppercase transition-all duration-200 dark:text-white;
     background: var(--muted);
   }
 
@@ -162,7 +162,7 @@
   }
 
   .btn-outline {
-    @apply inline-flex items-center justify-center rounded-md border-1 border-border bg-muted px-4 py-2 font-mono text-xs text-black uppercase transition-all transition-colors duration-200 hover:bg-input/50 hover:text-foreground;
+    @apply inline-flex items-center justify-center rounded-md border-1 border-border bg-muted px-4 py-2 font-mono text-xs text-foreground uppercase transition-all transition-colors duration-200 hover:bg-input/50 hover:text-foreground;
   }
 
   .btn-outline:hover {
@@ -179,7 +179,7 @@
     transform: scale(1.05);
   }
   .btn-approve {
-    @apply inline-flex items-center justify-center rounded-md px-4 py-2 font-mono text-xs font-bold text-black uppercase transition-all duration-200;
+    @apply inline-flex items-center justify-center rounded-md px-4 py-2 font-mono text-xs font-bold text-foreground uppercase transition-all duration-200;
     background: #00e408;
   }
 
